k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
        group: backend
    spec:
      containers:
        - name: auth-service
          image: mavishay/syncit-auth-service:latest
          ports:
            - containerPort: 3334
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
