k8s/calendars-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendars-service
  labels:
    app: calendars-service
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendars-service
  template:
    metadata:
      labels:
        app: calendars-service
        group: backend
    spec:
      containers:
        - name: calendars-service
          image: mavishay/syncit-calendars-service:latest
          ports:
            - containerPort: 3334
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
