k8s/integrations-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrations-service
  labels:
    app: integrations-service
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integrations-service
  template:
    metadata:
      labels:
        app: integrations-service
        group: backend
    spec:
      containers:
        - name: integrations-service
          image: mavishay/syncit-integrations-service:latest
          ports:
            - containerPort: 3336
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
