k8s/rabbitmq-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        type: db
    spec:
      volumes:                         # indicates which PVC are available for this Deployment
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-persistent-volume-claim
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
          volumeMounts:                 # indicates which Volume (from spec.template.spec.volumes) should be used
            - name: rabbitmq-storage                # name of the Volume
              mountPath: /var/lib/rabbitmq/   # path inside the container
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
