k8s/auth-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    group: backend
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 3334
      targetPort: 3334
