k8s/calendars-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendars-service
  labels:
    group: backend
spec:
  type: ClusterIP
  selector:
    app: calendars-service
  ports:
    - port: 3335
      targetPort: 3335
