k8s/integrations-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrations-service
  labels:
    group: backend
spec:
  type: ClusterIP
  selector:
    app: integrations-service
  ports:
    - port: 3336
      targetPort: 3336
