k8s/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    group: db
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
