k8s/web-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    group: frontend
spec:
  type: ClusterIP
  selector:
    app: web-service
  ports:
    - port: 4200
      targetPort: 4200
