k8s/syncit-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: adminer.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
    - host: syncit.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 4200
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3334
          - path: /api/calendars
            pathType: Prefix
            backend:
              service:
                name: calendars-service
                port:
                  number: 3335
          - path: /api/integrations
            pathType: Prefix
            backend:
              service:
                name: integrations-service
                port:
                  number: 3336
